<?xml version="1.0"?>
<package format="2">
  <name>ltu_actor_rpi_gpio</name>
  <version>0.0.1</version>
  <description>
    A node to read and control RPi GPIO pins through ros
  </description>
  <maintainer email="mpleune@ltu.edu">Mitchell Pleune</maintainer>
  <license>UNLICENSED</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>python-gpiozero</depend>
</package>
